--- a/vignettes/funtooNorm.Rmd
+++ b/vignettes/funtooNorm.Rmd
@@ -1,22 +1,22 @@
 ---
-title: "Normalizing Illumina Infinium Human Methylation 450k for multiple cell types with funtooNorm"
-author: "\\
-      Celia Greenwood^1,2^, Stepan Grinek^1^, Raphael Poujol^1^, Maxime Turgeon^2^, Kathleen Oros Klein^1^\\  
-
-      [1] Lady Davis Institute of Research, Montreal Quebec. [2] McGill University, Montreal Quebec."
-date: "`r Sys.Date()`"
-bibliography: MyEndnoteLibrary.bib
+title: Normalizing Illumina Infinium Human Methylation 450k for multiple cell types
+  with funtooNorm
+author: |-
+  \ Celia Greenwood^1,2^, Stepan Grinek^1^, Raphael Poujol^1^, Maxime Turgeon^2^, Kathleen Oros Klein^1^\
+  [1] Lady Davis Institute of Research, Montreal Quebec. [2] McGill University, Montreal Quebec.
+date: '`r Sys.Date()`'
 output:
-        prettydoc::html_pretty:
-            toc: true
-            theme: cayman
-            highligth: github
-        pdf_document:
-            toc:true
-vignette: >
-  %\VignetteIndexEntry{Normalizing Illumina Infinium Human Methylation 450k for multiple cell types with funtooNorm}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding[utf8]{inputenc}
+  pdf_document:
+    toc: yes
+  prettydoc::html_pretty:
+    highligth: github
+    theme: cayman
+    toc: yes
+  word_document:
+    toc: yes
+bibliography: MyEndnoteLibrary.bib
+vignette: |
+  %\VignetteIndexEntry{Normalizing Illumina Infinium Human Methylation 450k for multiple cell types with funtooNorm} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding[utf8]{inputenc}
 ---
 
 ```{r style, echo=FALSE, results="asis", message=FALSE}
